# kusanagi_trail_robot

./: .gitignore
firmware/bldc/: readme.md
firmware/bldc/usr/: main.cpp
firmware/com_test/: Makefile
firmware/com_test/usr/: com_def.h  com_driver.cpp  com_driver.h  com_driver.h_  main.cpp
firmware/imu/usr/: com_driver.cpp  com_driver.h  imu_ll.cpp  imu_ll.h  main.cpp
firmware/imu_demo/usr/: imu_ll.cpp  main.cpp
firmware/proto/: ll.pb.c  ll.pb.h  ll_pb.h
hardware/imu/: imu.eprj
hardware/imu_demo/: imu.eprj
hardware/motor_driver/: bldc_driver.eprj
proto/: Io.cs  generate.sh  hardware_endpoint.proto  io.pb.c  io.pb.h  io.proto  io_pb.h  io_pb2.py  ll.proto
src/experiments/imu_demo/: main.py  visualise.py
src/libs_com/: frame_spec.py  io_data.py  serial_bus.py  serial_protocol_endpoint.py
src/robot-hw-endpoint/: pyproject.toml
src/robot-hw-endpoint/src/robot_hw_endpoint/: __init__.py
src/robot-hw-endpoint/src/robot_hw_endpoint/grpc/: __init__.py  hardware_endpoint_pb2.py  hardware_endpoint_pb2_grpc.py  hw_client.py  hw_server.py  ll_pb2.py
src/robot-hw-endpoint/src/robot_hw_endpoint/ll/: __init__.py  io_data.py  serial_bus.py  serial_protocol_endpoint.py
src/tests/: client_grpc_test.py  client_grpc_test_0.py  client_grpc_test_a.py  hw_com_test.py  server_cli.py
